--- a/meeting-minutes/2018-05-21.md
+++ b/meeting-minutes/2018-05-21.md
@@ -1,7 +1,7 @@
-# Monday May 21 2018 meeting.
+# Monday May 21 2018 meeting
 
-Location: Room 412
-Time: 15:00-16:30 PST
+Location\: Room 412
+Time\: 15:00-16:30 PST
 
 ## Events:
 * New leadership for the 2018-2019 year was announced
