--- a/programming/plans/2019-TODO.md
+++ b/programming/plans/2019-TODO.md
@@ -1,13 +1,17 @@
 * Clean Batcave
 * Repair website
 * Take inventory
-* Clean up code (2018).
+* Clean up code (2018)
 * Find new members 
- * Get people who know how to code.
-  * Middle school demos.
-  * Talk to middle school teachers and principals.
- * Elementary school demos.
-  * Ditto to middle school  
- * Send email out to potential programmers.
- * Check comp sci A class.
+	* Get people who know how to code
+		* Middle school demos
+			* Talk to middle school teachers and principals
+		* Elementary school demos
+	* Send email out to potential programmers
+	* Check comp sci A class
+* Clean computers 
+* Migrate/Clean programming and sensor cabinet
+* Buy stuff. See programming/plans/tobuy.md
+* Dissasemble/rebuild boards
+	* Recycle garbage
 
