Added meeting minutes for today

--- a/programming/plans/2019-buy.md
+++ b/programming/plans/2019-buy.md
@@ -1,5 +1,4 @@
-* New classmates
-* Good limit switches (aap2t51z11)
-* Gyro
+* Good limit switches (aap2t51z11) 3?
+* Gyro (www.analog.com/first) (Model No. 4717)
 * Laptop?
-* Camera
+* Logitech C310 Camera
