--- a/meeting-minutes/2018-05-21.md
+++ b/meeting-minutes/2018-05-21.md
@@ -10,7 +10,7 @@ Time\: 15:00-16:30 PST
   * Vikasni Kalasthani is secretary
   * Katrina Bui is treasurer
   * Jyotaaver Nirula and Cady Boronkay are mechanical co-leads
-  * Jasper [TODO] is public relations lead
+  * Jasper Nguyen is public relations lead
   * Rushabh Shah is electrical lead
   * Sanjana Nandi is programming lead
   * Roman Garcia is safety captain
