--- a/meeting-minutes/2018-05-23.md
+++ b/meeting-minutes/2018-05-23.md
@@ -5,6 +5,9 @@ Time\: 13:00-15:00 PST
 
 ## Events
 * Continued planning
+	* Focused on education
+		* For programming, see programming/plans/2019-teach.md
 * Made lists of what to buy
+	* For programming, see programming/plans/2019-buy.md
 * Summer workshops
 
