--- a/meeting-minutes/2018-05-21.md
+++ b/meeting-minutes/2018-05-21.md
@@ -16,4 +16,4 @@ Time\: 15:00-16:30 PST
   * Roman Garcia is safety captain
 * Batcave is cleaned
 * Plans are made for the following year
-  * For programming, plans can be found in programming/plans/2019-TODO.md
+  * For programming, plans can be found [here] (../programming/plans/2019-TODO.md)
