--- a/programming/plans/2019-TODO.md
+++ b/programming/plans/2019-TODO.md
@@ -1,6 +1,4 @@
-* Clean Batcave
 * Repair website
-* Take inventory
 * Clean up code (2018)
 * Find new members 
 	* Get people who know how to code
@@ -10,8 +8,6 @@
 	* Send email out to potential programmers
 	* Check comp sci A class
 * Clean computers 
-* Migrate/Clean programming and sensor cabinet
-* Buy stuff. See programming/plans/tobuy.md
-* Dissasemble/rebuild boards
-	* Recycle garbage
-
+* Update "Reference Guide" with information about TalonSRX and Magnetic Encoders
+* Create demo for Robotics Freshmen Orientation
+* Check if all ethernet cables work
