--- a/programming/plans/2019-TODO.md
+++ b/programming/plans/2019-TODO.md
@@ -1,5 +1,19 @@
+* Create demo for freshmen orientation 
+	* Need to write subsystems and commands for 2017
+* Update "Reference Guide" with information about TalonSRX and Magnetic Encoders
+* Fix 2017
+	* Order input power adapter for RoboRio(3)
+* Wire up 2015
+* Check 2018
 * Repair website
+	* Govind is working on this 
+* Vision 
+* Order new CMOS battery for Dell Inspiron 
+	* Richard is working on this
 * Clean up code (2018)
+* Clean up repositories in GitHub
+* Clean computers 
+* Check if all ethernet cables work
 * Find new members 
 	* Get people who know how to code
 		* Middle school demos
@@ -7,7 +21,3 @@
 		* Elementary school demos
 	* Send email out to potential programmers
 	* Check comp sci A class
-* Clean computers 
-* Update "Reference Guide" with information about TalonSRX and Magnetic Encoders
-* Create demo for Robotics Freshmen Orientation
-* Check if all ethernet cables work
